# sph-code-simulation

./: .gitignore  CHECKPOINT_IMPLEMENTATION.md  CMakeLists.txt  HYDROSTATIC_KHI_SETUP_COMPLETE.md  Makefile  README_INDEX.md  lane_emden_config_manager.py  lane_emden_test.json  test_output.json
.cache/clangd/index/: bhtree.cpp.3D107883CD3B8401.idx  bhtree.hpp.3D2F7015C82B92E7.idx  checkpoint.cpp.2B6111227C4DBCE3.idx  checkpoint.hpp.4FB07D9512D23737.idx  csv_writer.cpp.26B9E6812FA28CA1.idx  csv_writer.hpp.6B1D13FD1EF855D2.idx  (+69 more)
.github/instructions/: coding_rule.instructions.md
.serena/: project.yml
.serena/memories/: code_structure.md  code_style.md  project_overview.md  suggested_commands.md  task_completion.md
docs/: CHECKPOINT_HDF5_MIGRATION.md  EXACT_RIEMANN_SOLVER_IMPLEMENTATION.md  GDISPH_BALSARA_SWITCH.md  GDISPH_IMPLEMENTATION.md  GSPH_IMPLEMENTATION_SUMMARY.md  GSPH_RIEMANN_SOLVER.md  GSPH_RIEMANN_SOLVER_QUICKSTART.md  GSPH_TEST_RESULTS.md  IMPLEMENTATION_PLAN.md  OUTPUT_CONFIG_EXAMPLES.md  OUTPUT_REDESIGN_SUMMARY.md  OUTPUT_UNIT_SYSTEM_DESIGN.md  SHOCK_TUBE_2D_ROOT_CAUSE_ANALYSIS.md  SHOCK_TUBE_2D_SEGFAULT_ROOT_CAUSE.md  SRGSPH_COMPLETION_SUMMARY.md  SRGSPH_IMPLEMENTATION.md  SSOT_RESUME_IMPLEMENTATION.md  VACUUM_ANALYTICAL_FIX_SUMMARY.md  VTK_INTEGRATION_SUMMARY.md  VTK_OUTPUT.md
docs/papers/: vacuum_riemann_problem_references.md
include/: CMakeLists.txt  bhtree.hpp  defines.hpp  defines.hpp.bak  output_manager.hpp  output_metadata.hpp  parameters.hpp  particle.hpp  solver.hpp  timestep.hpp  units.hpp
include/gdisph/: CMakeLists.txt  gd_fluid_force.hpp  gd_pre_interaction.hpp
include/gsph/: g_fluid_force.hpp
include/kernel/: cubic_spline.hpp  gaussian_kernel.hpp
include/relaxation/: lane_emden_data.hpp  lane_emden_relaxation.hpp
include/srgsph/: CMakeLists.txt  sr_exact_riemann.hpp  sr_fluid_force.hpp  sr_pre_interaction.hpp  sr_primitive_recovery.hpp  sr_timestep.hpp
include/writers/: csv_writer.hpp  hdf5_writer.hpp  vtk_writer.hpp
lane_emden/: BENCHMARK_STRUCTURE.md  MAKEFILE_SUMMARY.md  MULTI_METHOD_COMPARISON.md  Makefile.lane_emden  NEW_STRUCTURE_README.md  PERFORMANCE_OPTIMIZATION.md  README.md  RESUME_QUICK_START.md  WORKFLOW.md
lane_emden/2d/: Makefile.2d
lane_emden/3d/: Makefile.3d
lane_emden/config/: relaxation_defaults.json
lane_emden/docs/: CHECKPOINT_QUICK_REF.md  CHECKPOINT_SYSTEM.md  LANE_EMDEN_ARCHITECTURE.md  LANE_EMDEN_NOTES.md  LANE_EMDEN_README.md  RELAXATION_ONLY_MODE.md  old_relaxation_config.json.bak
lane_emden/scripts/: configure_resume.py  lane_emden_config_manager.py  test_hdf5_read.py
sample/: README.md
sample/checkpoint_test/: checkpoint_test.json
sample/evrard/: evrard.json
sample/gresho_chan_vortex/: Makefile.gresho  README.md  gresho_chan_vortex.json
sample/hydrostatic/: Makefile.hydrostatic  README.md
sample/khi/: Makefile.khi  README.md
sample/lane_emden/: lane_emden.json
sample/pairing_instability/: KERNEL_COMPARISON_COMPLETE.md  Makefile.pairing_instability
sample/sedov/: Makefile.sedov  README.md  sedov.json
sample/shock_tube/: Makefile.shock_tube  README.md  README_COMPARISON.md
sample/shock_tube_2d/: BUGFIX_GSPH_CRASH.md  Makefile.shock_tube_2d  README.md
sample/sr_sod/: ANIMATION_README.md  Makefile.sr_sod  README.md  sr_sod.json  sr_ultra_relat.json
sample/strong_shock/: ANALYTICAL_SOLUTION.md  BUGFIX_ANALYTICAL_TIME.md  IMPLEMENTATION_COMPLETE.md  Makefile.strong_shock  README.md
sample/vacuum/: Makefile.vacuum  README.md
scripts/: compress_gif.py  run_with_progress.py  sr_sod_force_analysis.py  sr_sod_full_diagnostic.py  sr_sod_theoretical_force.py  test_kernel_gradient.cpp  visualize_sr_sod.py
src/: CMakeLists.txt  bhtree.cpp  output_manager.cpp  output_metadata.cpp  simulation.cpp  solver.cpp  units.cpp
src/gdisph/: CMakeLists.txt  gd_fluid_force.cpp  gd_pre_interaction.cpp
src/gsph/: g_fluid_force.cpp
src/relaxation/: CMakeLists.txt  lane_emden_data.cpp  lane_emden_relaxation.cpp
src/sample/: CMakeLists.txt  evrard.cpp  evrard_cold_collapse.cpp  lane_emden.cpp  pressure_equilibrium.cpp  sedov.cpp  shock_tube_2d.cpp  sr_blast_wave.cpp  sr_sod.cpp  sr_ultra_relat.cpp  strong_shock.cpp  vacuum.cpp
src/srgsph/: CMakeLists.txt  README.md  sr_fluid_force.cpp  sr_pre_interaction.cpp  sr_primitive_recovery.cpp  sr_timestep.cpp
src/writers/: CMakeLists.txt  csv_writer.cpp  hdf5_writer.cpp  vtk_writer.cpp
test/checkpoint_csv_resume/: snapshot_0000.csv  snapshot_0001.csv
(+155 files in other folders)
